# ML2-Lab2

./: pyproject.toml
unsupervised_package/: Kmeans.py  Kmedoids.py
unsupervised_package/dim_reduction/: PCA.py  SVD.py  TSNE.py
